--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-build</artifactId>
 	<version>${revision}</version>
+	<modules>
+		<module>spring-boot-example</module>
+	</modules>
 	<packaging>pom</packaging>
 	<name>Spring Boot Build</name>
 	<description>Spring Boot Build</description>
@@ -28,55 +31,55 @@
 			</properties>
 			<build>
 				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-checkstyle-plugin</artifactId>
-						<version>3.0.0</version>
-						<dependencies>
-							<dependency>
-								<groupId>com.puppycrawl.tools</groupId>
-								<artifactId>checkstyle</artifactId>
-								<version>8.12</version>
-							</dependency>
-							<dependency>
-								<groupId>io.spring.javaformat</groupId>
-								<artifactId>spring-javaformat-checkstyle</artifactId>
-								<version>${spring-javaformat.version}</version>
-							</dependency>
-						</dependencies>
-						<executions>
-							<execution>
-								<id>checkstyle-validation</id>
-								<phase>validate</phase>
-								<configuration>
-									<skip>${disable.checks}</skip>
-									<configLocation>src/checkstyle/checkstyle.xml</configLocation>
-									<suppressionsLocation>src/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
-									<includeTestSourceDirectory>true</includeTestSourceDirectory>
-									<propertyExpansion>main.basedir=${main.basedir}</propertyExpansion>
-								</configuration>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>io.spring.javaformat</groupId>
-						<artifactId>spring-javaformat-maven-plugin</artifactId>
-						<version>${spring-javaformat.version}</version>
-						<executions>
-							<execution>
-								<phase>validate</phase>
-								<configuration>
-									<skip>${disable.checks}</skip>
-								</configuration>
-								<goals>
-									<goal>validate</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
+<!--					<plugin>-->
+<!--						<groupId>org.apache.maven.plugins</groupId>-->
+<!--						<artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--						<version>3.0.0</version>-->
+<!--						<dependencies>-->
+<!--							<dependency>-->
+<!--								<groupId>com.puppycrawl.tools</groupId>-->
+<!--								<artifactId>checkstyle</artifactId>-->
+<!--								<version>8.12</version>-->
+<!--							</dependency>-->
+<!--							<dependency>-->
+<!--								<groupId>io.spring.javaformat</groupId>-->
+<!--								<artifactId>spring-javaformat-checkstyle</artifactId>-->
+<!--								<version>${spring-javaformat.version}</version>-->
+<!--							</dependency>-->
+<!--						</dependencies>-->
+<!--						<executions>-->
+<!--							<execution>-->
+<!--								<id>checkstyle-validation</id>-->
+<!--								<phase>validate</phase>-->
+<!--								<configuration>-->
+<!--									<skip>${disable.checks}</skip>-->
+<!--									<configLocation>src/checkstyle/checkstyle.xml</configLocation>-->
+<!--									<suppressionsLocation>src/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>-->
+<!--									<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+<!--									<propertyExpansion>main.basedir=${main.basedir}</propertyExpansion>-->
+<!--								</configuration>-->
+<!--								<goals>-->
+<!--									<goal>check</goal>-->
+<!--								</goals>-->
+<!--							</execution>-->
+<!--						</executions>-->
+<!--					</plugin>-->
+<!--					<plugin>-->
+<!--						<groupId>io.spring.javaformat</groupId>-->
+<!--						<artifactId>spring-javaformat-maven-plugin</artifactId>-->
+<!--						<version>${spring-javaformat.version}</version>-->
+<!--						<executions>-->
+<!--							<execution>-->
+<!--								<phase>validate</phase>-->
+<!--								<configuration>-->
+<!--									<skip>${disable.checks}</skip>-->
+<!--								</configuration>-->
+<!--								<goals>-->
+<!--									<goal>validate</goal>-->
+<!--								</goals>-->
+<!--							</execution>-->
+<!--						</executions>-->
+<!--					</plugin>-->
 				</plugins>
 			</build>
 			<modules>
